# NeuralNetworks

./: CMakeLists.txt
include/: neural_net.c  neural_net.h  neuron.c  neuron.h  ooc.c  ooc.h
src/: main.c
